<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yandex_sans_text_regular"
        android:text="@string/search_by_ingredients"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yandex_sans_text_regular"
        android:text="@string/search_by_name"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yandex_sans_text_regular"
        android:text="@string/random_cocktail"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />
</LinearLayout>